test: transaction 서비스 단위/레포지토리 테스트 작성